[package]
name = "lesbar-macros"
version = "0.1.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Procedural macros for string types that encode legible text."
repository = "https://github.com/olson-sean-k/lesbar"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "^1.0"
syn = "^2.0"

[dependencies.lesbar-text]
version = "^0.1.0"
path = "../lesbar-text"

[dependencies.mitsein]
workspace = true

[dev-dependencies]

[dev-dependencies.rstest]
workspace = true
