[package]
name = "lesbar-macros"
version = "0.1.0"
description = "Procedural macros for string types that encode legible text."

authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
mitsein.workspace = true
quote = "^1.0"
syn = "^2.0"

[dependencies.lesbar-text]
version = "^0.1.0"
path = "../lesbar-text"

[dev-dependencies]
rstest.workspace = true
