[package]
name = "lesbar-text"
version = "0.1.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
repository = "https://github.com/olson-sean-k/lesbar"
edition = "2021"

[dependencies]

[dependencies.unicode-segmentation]
workspace = true

[dependencies.unicode-width]
workspace = true

[dev-dependencies]

[dev-dependencies.rstest]
workspace = true
