[package]
name = "lesbar-text"
version = "0.1.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
repository = "https://github.com/olson-sean-k/lesbar"
edition = "2021"
rust-version = "1.83.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]

[features]
default = []
alloc = ["mitsein/alloc"]

[dependencies]
unicode-properties = "^0.1.3"

[dependencies.mitsein]
workspace = true

[dependencies.unicode-segmentation]
workspace = true

[dependencies.unicode-width]
workspace = true

[dev-dependencies]

[dev-dependencies.rstest]
workspace = true
