[package]
name = "lesbar-text"
version = "0.1.0"
description = "String extensions and queries for legible text."

authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]

[features]
default = []
alloc = ["mitsein/alloc"]

[dependencies]
mitsein.workspace = true
unicode-properties = "^0.1.3"
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
rstest.workspace = true
