[package]
name = "lesbar"
version = "0.1.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "String types that must encode legible text."
repository = "https://github.com/olson-sean-k/lesbar"
readme = "../README.md"
edition = "2021"

[features]
default = ["alloc"]
alloc = [
    "lesbar-text/alloc",
    "mitsein/alloc",
    "serde?/alloc",
]
serde = [
    "dep:serde",
    "dep:serde_derive",
    "mitsein/serde",
]

[dependencies]

[dependencies.lesbar-macros]
version = "^0.1.0"
path = "../lesbar-macros"

[dependencies.lesbar-text]
version = "^0.1.0"
path = "../lesbar-text"

[dependencies.mitsein]
workspace = true

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dependencies.serde_derive]
version = "1.0"
default-features = false
optional = true

[dependencies.unicode-segmentation]
workspace = true

[dependencies.unicode-width]
workspace = true

[dev-dependencies]

[dev-dependencies.rstest]
workspace = true
