[package]
name = "lesbar"
version = "0.1.0"
description = "String types that must encode legible text."
readme = "../README.md"

authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]

[features]
default = ["alloc"]
alloc = [
    "lesbar-text/alloc",
    "mitsein/alloc",
    "serde?/alloc",
]
serde = [
    "dep:serde",
    "dep:serde_derive",
    "mitsein/serde",
]

[dependencies]
mitsein.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dependencies.lesbar-macros]
version = "^0.1.0"
path = "../lesbar-macros"

[dependencies.lesbar-text]
version = "^0.1.0"
path = "../lesbar-text"

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dependencies.serde_derive]
version = "1.0"
default-features = false
optional = true

[dev-dependencies]
rstest.workspace = true
serde_test = "1.0"
